# llm-d-rl-time-slicing

./: Dockerfile  Makefile  OWNERS  README.md  go.mod  go.sum
.github/workflows/: ci-pr-checks.yaml
cmd/acceleratororchestrator/: main.go
cmd/snapshot-agent/: main.go
deploy/acceleratororchestrator/: Chart.yaml  values.yaml
deploy/acceleratororchestrator/templates/: _helpers.tpl  deployment.yaml  service.yaml
docker/acceleratororchestrator/: Dockerfile
guides/accelerator-orchestrator/: README.md
guides/snapshot-agent/: README.md
pkg/accelerator-orchestrator/api/v1alpha1/: accelerator_orchestrator.pb.go  accelerator_orchestrator.proto  accelerator_orchestrator_grpc.pb.go
pkg/accelerator-orchestrator/controller/: controller.go
pkg/accelerator-orchestrator/server/: server.go  server_test.go
pkg/client/python/: README.md  pyproject.toml
pkg/client/python/timeslice/: __init__.py
pkg/client/python/timeslice/snapshot_agent/: __init__.py  client.py  health_pb2.py  health_pb2_grpc.py  snapshot_agent_pb2.py  snapshot_agent_pb2_grpc.py  types.py
pkg/snapshot-agent/: go.mod
pkg/snapshot-agent/api/v1alpha1/: doc.go  snapshot_agent.pb.go  snapshot_agent.proto  snapshot_agent_grpc.pb.go
pkg/snapshot-agent/backends/: checkpoint.go
pkg/snapshot-agent/server/: server.go  server_test.go
